simple ui layout

--- a/index.html
+++ b/index.html
@@ -8,7 +8,37 @@
 <body>
 	<div class="wrapper">
 		<form name="calculator">
-			
+			<table>
+				<tr>
+					<td colspan="4">
+						<input type="text" name="display" class="display" disabled="true">
+					</td>
+				</tr>
+				<tr>
+					<td><input type="button" name="one" value="1"></td>
+					<td><input type="button" name="two" value="2"></td>
+					<td><input type="button" name="three" value="3"></td>
+					<td><input type="button" name="plus" value="+"></td>
+				</tr>
+				<tr>
+					<td><input type="button" name="four" value="4"></td>
+					<td><input type="button" name="five" value="5"></td>
+					<td><input type="button" name="six" value="6"></td>
+					<td><input type="button" name="minus" value="-"></td>
+				</tr>
+				<tr>
+					<td><input type="button" name="seven" value="7"></td>
+					<td><input type="button" name="eight" value="8"></td>
+					<td><input type="button" name="nine" value="9"></td>
+					<td><input type="button" name="times" value="*"></td>
+				</tr>
+				<tr>
+					<td><input type="button" name="clear" value="c"></td>
+					<td><input type="button" name="zero" value="0"></td>
+					<td><input type="button" name="results" value="="></td>
+					<td><input type="button" name="divide" value="/"></td>
+				</tr>
+			</table>			
 		</form>
 	</div>
 </body>
